REGRESSION (r253867): Six test262 tests broken https://bugs.webkit.org/show_bug.cgi?id=205583

Reviewed by Mark Lam.

JSTests:

* stress/bound-function-empty-name.js: Added.
(shouldBe):

Source/JavaScriptCore:

If a function has empty name, a bound function should have "bound " name.
But Intl prototypes' bound functions are exceptions: these JSBoundFunctions have empty name.
In this patch, we pass `nullptr` for the JSBoundFunction::create's nameMayBeNull parameter of Intl prototypes' bound functions,
to generate empty string name for these bound functions instead of "bound "[1].
This fixes test262 failures.

[1]: https://tc39.es/ecma402/#sec-collator-compare-functions

* runtime/IntlCollatorPrototype.cpp:
(JSC::IntlCollatorPrototypeGetterCompare):
* runtime/IntlDateTimeFormatPrototype.cpp:
(JSC::IntlDateTimeFormatPrototypeGetterFormat):
* runtime/IntlNumberFormatPrototype.cpp:
(JSC::IntlNumberFormatPrototypeGetterFormat):
* runtime/JSBoundFunction.cpp:
(JSC::JSBoundFunction::create):
(JSC::JSBoundFunction::JSBoundFunction):
(JSC::JSBoundFunction::visitChildren):
* runtime/JSBoundFunction.h:
* runtime/JSFunction.cpp:
(JSC::JSFunction::reifyLazyBoundNameIfNeeded):
* runtime/SmallStrings.cpp:
(JSC::SmallStrings::initializeCommonStrings):
* runtime/SmallStrings.h:
(JSC::SmallStrings::boundPrefixString const):

Canonical link: https://commits.webkit.org/218858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253982 268f45cc-cd09-0410-ab3c-d52691b4dbfc